--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "laravel-mix": "^6.0.49",
     "less": "^4.1.3",
     "less-loader": "^11.1.3"
+  },
+  "dependencies": {
+    "normalize.less": "^1.0.0"
   }
 }
